# veredas-de-papel

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  DIFERENCIAIS.md  PRD.md  README.md  ROADMAP.md  USER_GUIDE.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4360d097bff0_add_health_data_if_and_new_anomaly_types.py  7f39d0510ecc_initial_schema.py  81a87cdde4b2_add_phase4_models.py  9e4fdd7f0113_initial_schema.py  c7e9f3a5b2d1_add_mercado_column_to_taxa_cdb.py
docs/: cli-guide.md  decisoes_tecnicas.md  installation.md  relatorio_arquitetura.md  relatorio_backend.md  relatorio_consolidado.md  relatorio_ml.md  relatorio_performance.md  relatorio_qa_testes.md  relatorio_qualidade_codigo.md  relatorio_seguranca.md
future_work/src/veredas/alerts/: manager.py  telegram.py
future_work/src/veredas/collectors/alternative/: reclame_aqui.py
future_work/src/veredas/collectors/b3/: __init__.py  parser.py
future_work/src/veredas/detectors/: platform_discrepancy.py
plans/: CODE_REVIEW_PHASE1.md  DEVELOPMENT_PLAN.md  IMPLEMENTAÇÃO.md  PHASE4_CODE_REVIEW.md  manifesto_veredas.md
plans/history/: PHASE1_DEV_DIARY.md  PHASE3_DEV_DIARY.md  PHASE4_DEV_DIARY.md
src/veredas/: __init__.py  catalog.py  config.py  validators.py
src/veredas/alerts/: __init__.py  base.py  email.py  manager.py  telegram.py
src/veredas/analysis/: __init__.py  charts.py  health.py  risk_score.py
src/veredas/api/: __init__.py  detection.py  schemas.py
src/veredas/cli/: __init__.py  _collect.py  _export.py  alerts.py  main.py
src/veredas/collectors/: __init__.py  base.py  bcb.py  ifdata.py  scheduler.py  scraper_base.py  scraper_client.py
src/veredas/collectors/alternative/: __init__.py  bacen_processos.py  reclame_aqui.py
src/veredas/collectors/b3/: __init__.py  api.py  collector.py  downloader.py  models.py  parser.py
src/veredas/collectors/scrapers/: __init__.py  anti_bot.py  base.py  btg.py  inter.py  normalize.py  normalizer.py  rico.py  xp.py
src/veredas/collectors/sentiment/: __init__.py  aggregator.py  analyzer.py
src/veredas/detectors/: __init__.py  base.py  engine.py  features.py  health.py  ml.py  platform_discrepancy.py  price_drop.py  rules.py  sentiment_risk.py  statistical.py
src/veredas/detectors/experimental/: __init__.py  stl.py
src/veredas/storage/: __init__.py  database.py  models.py  repository.py  seeds.py
src/veredas/web/: __init__.py  app.py  cache.py  csrf.py  dependencies.py  ratelimit.py  templates_config.py
src/veredas/web/routes/: __init__.py  anomalias.py  home.py  instituicoes.py  taxas.py  timeline.py
src/veredas/web/templates/: anomalias.html  base.html  evento.html  index.html  instituicao.html  instituicoes.html  taxa_detail.html  taxas.html  timeline.html
tests/: conftest.py
tests/cli/: test_commands.py
tests/collectors/: test_bcb.py  test_scheduler.py
tests/detectors/: test_engine.py  test_ml.py  test_rules.py  test_statistical.py
tests/integration/: test_pipeline.py  test_web_routes.py
tests/storage/: test_models.py  test_repository.py
tests/unit/: test_catalog.py  test_validators.py
tests/unit/alerts/: test_manager.py
tests/unit/analysis/: test_health.py  test_risk_score.py
tests/unit/collectors/: test_alternative.py  test_b3.py  test_b3_downloader.py  test_b3_parser.py  test_normalize.py  test_scheduler.py  test_scraper_base.py  test_scrapers.py  test_sentiment.py
tests/unit/detectors/: test_engine.py  test_ml.py  test_phase4_detectors.py  test_rules.py  test_statistical.py
tests/unit/storage/: test_repository.py
tests/unit/web/: test_csrf.py  test_ratelimit.py
(+17 files in other folders)
