[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veredas-de-papel"
version = "0.1.0"
description = "Monitor de taxas de CDB e detecção de anomalias no mercado de renda fixa brasileiro"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "ffreitasb" }
]
keywords = ["cdb", "renda-fixa", "anomaly-detection", "banco-central", "finance", "brazil"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core
    "python-bcb>=0.2.0",           # API do Banco Central
    "httpx>=0.27.0",               # HTTP client async
    "pandas>=2.2.0",               # Manipulação de dados
    "numpy>=1.26.0",               # Computação numérica

    # Database
    "sqlalchemy>=2.0.0",           # ORM
    "alembic>=1.13.0",             # Migrations

    # CLI
    "typer[all]>=0.12.0",          # CLI framework
    "rich>=13.7.0",                # Terminal formatting

    # Validation
    "pydantic>=2.6.0",             # Data validation
    "pydantic-settings>=2.2.0",    # Settings management

    # Analysis
    "statsmodels>=0.14.0",         # STL decomposition
    "scipy>=1.12.0",               # Statistical functions
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
web = [
    "fastapi>=0.109.0",            # Web framework
    "uvicorn[standard]>=0.27.0",   # ASGI server
    "jinja2>=3.1.0",               # Templates
    "python-multipart>=0.0.9",     # Form handling
    "plotly>=5.18.0",              # Charts (server-side)
]
ml = [
    "scikit-learn>=1.4.0",         # Isolation Forest, DBSCAN
    "ruptures>=1.1.9",             # Change point detection (PELT)
]
dashboard = [
    "streamlit>=1.31.0",
]
alerts = [
    "python-telegram-bot>=21.0",
]

[project.scripts]
veredas = "veredas.cli.main:app"

[project.urls]
Homepage = "https://github.com/ffreitasb/veredas-de-papel"
Repository = "https://github.com/ffreitasb/veredas-de-papel"
Issues = "https://github.com/ffreitasb/veredas-de-papel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/veredas"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in argument defaults (required by FastAPI Depends and Typer Option)
]

[tool.ruff.lint.isort]
known-first-party = ["veredas"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/veredas --cov-report=term-missing"

[tool.coverage.run]
source = ["src/veredas"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert_used - usado em testes
